--- a/.github/workflows/readme_dev.yml
+++ b/.github/workflows/readme_dev.yml
@@ -14,3 +14,14 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LINES_OF_CODE: False
+          SHOW_TOTAL_CODE_TIME: False
+          SHOW_PROFILE_VIEWS: False
+          SHOW_COMMIT: True
+          SHOW_DAYS_OF_WEEK: False
+          SHOW_LANGUAGE: False
+          SHOW_OS: False
+          SHOW_PROJECTS: True
+          SHOW_EDITORS: True
+          SHOW_LANGUAGE_PER_REPO: True
+          SHOW_SHORT_INFO: False
